Interação com Heroku(testando).

--- a/templates/gerenciamento.html
+++ b/templates/gerenciamento.html
@@ -61,7 +61,7 @@
                         </tbody>
                       </table>
                         {% if "Finalizado" in carrinhos["Mesa 1"]["situacao"] %}
-                            <form action="/limpar_carrinho" enctype="multipart/form-data" method="get">
+                            <form action="/limpar_carrinho/1" enctype="multipart/form-data" method="get">
                             <input type="submit" class="btn btn-danger btn-lg btn-block rounded-0"  value="Limpar Mesa"/>
                             </form>
                         {% endif %}
@@ -91,7 +91,7 @@
                         </tbody>
                       </table>
                         {% if "Finalizado" in carrinhos["Mesa 2"]["situacao"] %}
-                            <form action="/limpar_carrinho" enctype="multipart/form-data" method="get">
+                            <form action="/limpar_carrinho/2" enctype="multipart/form-data" method="get">
                             <input type="submit" class="btn btn-danger btn-lg btn-block rounded-0"  value="Limpar Mesa"/>
                             </form>
                         {% endif %}
@@ -119,7 +119,7 @@
                         </tbody>
                       </table>
                         {% if "Finalizado" in carrinhos["Mesa 3"]["situacao"] %}
-                            <form action="/limpar_carrinho" enctype="multipart/form-data" method="get">
+                            <form action="/limpar_carrinho/3" enctype="multipart/form-data" method="get">
                             <input type="submit" class="btn btn-danger btn-lg btn-block rounded-0"  value="Limpar Mesa"/>
                             </form>
                         {% endif %}               </div>
@@ -146,7 +146,7 @@
                         </tbody>
                       </table>
                         {% if "Finalizado" in carrinhos["Mesa 4"]["situacao"] %}
-                            <form action="/limpar_carrinho" enctype="multipart/form-data" method="get">
+                            <form action="/limpar_carrinho/4" enctype="multipart/form-data" method="get">
                             <input type="submit" class="btn btn-danger btn-lg btn-block rounded-0" value="Limpar Mesa"/>
                             </form>
                         {% endif %}
