Interação com Heroku(testando).

--- a/templates/carrinho.html
+++ b/templates/carrinho.html
@@ -48,7 +48,7 @@
                 <tr>
                   <th scope="col" style="color:lightgoldenrodyellow;">Prato</th>
                   <th scope="col" style="color:lightgoldenrodyellow;" >Preço</th>
-                    <th scope="col" style="color:lightgoldenrodyellow;">Quantidade</th>
+                    <th scope="col" style="color:lightgoldenrodyellow;">Qtd</th>
                 </tr>
               </thead>
               <tbody>
