Correção: botão "limpar carrinho"

--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -35,7 +35,7 @@
       <main>
 
 
-        <form action="/validacao_compra" method="post" enctype="multipart/form-data">
+        <form action="/salvando_cookie" method="post" enctype="multipart/form-data">
           <div class="form-position">
             <br><br>
             <h2 id="titulo">Sua mesa</h2>
