Correção: botão "limpar carrinho"

--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -42,6 +42,7 @@
 
             <div class="form-group">
               <label for="exampleFormControlSelect1">Marque o número de sua mesa</label>
+                <input type="text" name="produto_id" value="{{ produto_id }}" hidden/>
               <select class="form-control" name="mesa" id="exampleFormControlSelect1" required>
                 <option>1</option>
                 <option>2</option>
