Retornando versao anterior para correçao de erro no servidor

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,10 @@
         <p > Bem vindo ao Cardápio Digital. Abaixo está as melhores comidas da região!!<br>
           Fique a vontade e faça sua escolha, Bom Apetite!!<br>
         </p>
-        <p1>**Obs: Após selecionar, os pedidos estarão no "Carrinho" onde você poderá finalizar a comprar e escolher a forma de pagamento.<p1>
+        <p1>**Obs: Após selecionar, os pedidos estarão na "Lista de Pedidos" onde você poderá finalizar a comprar e escolher a forma de pagamento.<p1>
       </div>
       
-      <div >
-
+      <center>
         <div class="cards container-main"  >    
           <div class=""> <!-- "col mb-4" -->
             <div class="cartao">
@@ -56,9 +55,7 @@
                 <p class="card-text">R$ 12,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="7">
-                  {% if "Pendente" in situacao %}
                   <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
                 </form>
               </div>
             </div>
@@ -67,13 +64,11 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo1.png" class="card-img-top" alt="...">
               <div class="card-body tamanho">
-                <h5 class="card-title">Combinado 2</h5>
+                <h5 class="card-title">Doce de cupuaçu</h5>
                 <p class="card-text">R$ 8,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="8">
-                  {% if "Pendente" in situacao %}
-                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -82,13 +77,11 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo2.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 3</h5>
+                <h5 class="card-title">Bolinho de Carne</h5>
                 <p class="card-text">R$ 5,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="9">
-                   {% if "Pendente" in situacao %}
-                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -97,13 +90,11 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo3.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 4</h5>
+                <h5 class="card-title">Tortilhas</h5>
                 <p class="card-text">R$ 4,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="10">
-                  {% if "Pendente" in situacao %}
-                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
+                  <input type="submit"  class="btn btn-primary" value="Visualizar"></input>
                 </form>
               </div>
             </div>
@@ -112,13 +103,11 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo4.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 5</h5>
+                <h5 class="card-title">Camarão Empanado</h5>
                 <p class="card-text">R$ 11,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="11">
-                   {% if "Pendente" in situacao %}
-                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
+                  <input type="submit"  class="btn btn-primary" value="Visualizar" ></input>
                 </form>
               </div>
             </div>
@@ -127,23 +116,19 @@
             <div class="cartao">
               <img src="../static/image/Aperitivo5.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Combinado 6</h5>
+                <h5 class="card-title">Pratos Regionais</h5>
                 <p class="card-text">R$ 12,00</p>
                 <form action="combinado"  method="post" enctype="multipart/form-data" >
                   <input hidden type="text" name="prato" value="12">
-                   {% if "Pendente" in situacao %}
-                  <input type="submit" class="btn btn-primary" value="Visualizar" ></input>
-                  {% endif %}
+                  <input type="submit"  class="btn btn-primary" value="Visualizar"></input>
                 </form>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </center>
     </main>
     
-    </aside class="sobre">
-    <!-- sobre -->
     <footer>
       <!-- sobre -->
     </footer>
