--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -6,13 +6,9 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <link rel="stylesheet" href="../static/css/formulario.css"/>
   </head>
-  <style>
-  
-
-  </style>
 
   <body hgcolor="White" text="Black">
-    <div class="container-body "> 
+    <div class="container-body">
       <header>
         <div class=".container-fluid">
           <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -39,8 +35,8 @@
       <main>
 
 
-        <form action="/salvando_cookie"  method="post" enctype="multipart/form-data">
-          <div class="form-position " with="100%">
+        <form action="/salvando_cookie" method="post" enctype="multipart/form-data">
+          <div class="form-position">
             <br><br>
             <h2 id="titulo">Sua mesa</h2>
 
