--- a/static/css/formulario.css
+++ b/static/css/formulario.css
@@ -15,7 +15,7 @@ html, body{
 .container-body{
    display: grid;
    grid-template-columns: 1fr;
-   grid-template-rows: 0.1fr 5fr 0.4fr; 
+   grid-template-rows: 1fr 9fr 1.5fr; 
    grid-template-areas: "header header"
                        "main main"
                        "footer footer";
@@ -42,6 +42,7 @@ main{
 
 
 footer{
+   height: 100%;
    background-color: #343a40;
    grid-area: footer;
 }
@@ -84,7 +85,6 @@ nav a{
 form{
    justify-self: center;
    text-align: justify;
-   width: 80%;
 }
 
 /* div{
